@@ -1,3 +1,4 @@
+2015-01-09 Fixed Stand and Hide Area functions on mobile devices in IWB Toolbar module
 2015-01-08 Fixed notes on mobile devices in IWB Toolbar module
 2015-01-08 Added ShowAnswers to Fractions module
 2015-01-08 Added ShowAnswers to Clock module
